# tilldone

./: .gitignore  LICENSE  README.md  README.zh-CN.md  conftest.py  pyproject.toml
scripts/: _live-env.sh  nightly-live-matrix.sh  run-live.sh
src/tilldone/: __init__.py
src/tilldone/backends/: claude.py  codex.py  codex_exec.py  fake.py  mcp_bridge.py
src/tilldone/core/: backend.py  budget.py  contract.py  enums.py  event_sink.py  events.py  flow.py  inputs.py  loop.py  refs.py  registry.py  sessions.py  snapshot.py  spec.py  tools.py  validators.py
tests/: test_archived_app_server_collection.py  test_secret_scan.py  test_zero_core_diff.py
tests/backends/: test_advanced_integration.py  test_capability.py  test_claude_integration.py  test_claude_unit.py  test_codex_cancel.py  test_codex_config.py  test_codex_error_classify.py  test_codex_exec_stream.py  test_codex_integration.py  test_codex_unit.py  test_fake.py  test_mcp_bridge.py  test_resume_guard.py  test_resume_integration.py
tests/conformance/: test_conformance.py
tests/core/: test_boundary.py  test_budget.py  test_concurrent_tools.py  test_contract.py  test_cross_run_isolation.py  test_event_sink.py  test_events.py  test_flow.py  test_large_tool_result.py  test_loop.py  test_public_api.py  test_refs.py  test_registry.py  test_sessions.py  test_smoke.py  test_snapshot.py  test_spec.py  test_t1_gate.py  test_todos.py  test_tools.py  test_type_hint.py  test_validators.py
tests/parity/: test_parity_diff.py  test_swap.py
tests/recipes/: test_recipe_app_server.py  test_translate.py
(+34 files in other folders)
